<resources>
    <string name="app_name">Gerenciador de Ponto</string>
    <string name="botaoCadastro">Cadastrar</string>
    <string name="botaoBaterPonto">Bater Ponto</string>
    <string name="botaoVisualizarBatidas">Visualizar Batidas</string>
    <string name="hintNomeCompleto">Nome Completo</string>
    <string name="hintDataNascimento">Data Nascimento</string>
    <string name="hintPIS">PIS</string>
    <string name="botaoCadastrar">Cadastrar</string>
    <string name="placeHolder">João Silva</string>
    <string name="botaoVoltar">Voltar</string>
    <string name="hintPrimeiraLetra">Qual a primeira letra do seu nome?</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="hintDiaAniversario">Qual o dia do seu aniversario?</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="hintVoceE">Você é?</string>
</resources>
