<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".Views.TelaBaterPonto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/textPrimeiraLetra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/hintPrimeiraLetra"
            android:textSize="40dp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_marginTop="20dp"
            android:id="@+id/grid1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textPrimeiraLetra"
            android:layout_centerInParent="true"
            android:columnCount="10"
            android:orientation="horizontal"
            android:rowCount="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="35dp"
                android:text="@string/q" />

            <Button
                android:id="@+id/button2"
                android:layout_width="35dp"
                android:text="@string/w" />

            <Button
                android:id="@+id/button3"
                android:layout_width="35dp"
                android:text="@string/e" />

            <Button
                android:id="@+id/button4"
                android:layout_width="35dp"
                android:text="@string/r" />

            <Button
                android:id="@+id/button5"
                android:layout_width="35dp"
                android:text="@string/t" />

            <Button
                android:id="@+id/button6"
                android:layout_width="35dp"
                android:text="@string/y" />

            <Button
                android:id="@+id/button7"
                android:layout_width="35dp"
                android:text="@string/u" />

            <Button
                android:id="@+id/button8"
                android:layout_width="35dp"
                android:text="@string/i" />

            <Button
                android:id="@+id/button9"
                android:layout_width="35dp"
                android:text="@string/o" />

            <Button
                android:id="@+id/button10"
                android:layout_width="35dp"
                android:text="@string/p" />
        </GridLayout>

        <GridLayout
            android:id="@+id/grid2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grid1"
            android:layout_centerInParent="true"
            android:columnCount="10"
            android:orientation="horizontal"
            android:rowCount="1">

            <Button
                android:id="@+id/button11"
                android:layout_width="35dp"
                android:text="@string/a" />

            <Button
                android:id="@+id/button12"
                android:layout_width="35dp"
                android:text="@string/s" />

            <Button
                android:id="@+id/button13"
                android:layout_width="35dp"
                android:text="@string/d" />

            <Button
                android:id="@+id/button14"
                android:layout_width="35dp"
                android:text="@string/f" />

            <Button
                android:id="@+id/button15"
                android:layout_width="35dp"
                android:text="@string/g" />

            <Button
                android:id="@+id/button16"
                android:layout_width="35dp"
                android:text="@string/h" />

            <Button
                android:id="@+id/button17"
                android:layout_width="35dp"
                android:text="@string/j" />

            <Button
                android:id="@+id/button18"
                android:layout_width="35dp"
                android:text="@string/k" />

            <Button
                android:id="@+id/button19"
                android:layout_width="35dp"
                android:text="@string/l" />
        </GridLayout>

        <GridLayout
            android:id="@+id/grid3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grid2"
            android:layout_centerInParent="true"
            android:columnCount="10"
            android:orientation="horizontal"
            android:rowCount="1">

            <Button
                android:id="@+id/button20"
                android:layout_width="35dp"
                android:text="@string/z" />

            <Button
                android:id="@+id/button21"
                android:layout_width="35dp"
                android:text="@string/x" />

            <Button
                android:id="@+id/button22"
                android:layout_width="35dp"
                android:text="@string/c" />

            <Button
                android:id="@+id/button23"
                android:layout_width="35dp"
                android:text="@string/v" />

            <Button
                android:id="@+id/button24"
                android:layout_width="35dp"
                android:text="@string/b" />

            <Button
                android:id="@+id/button25"
                android:layout_width="35dp"
                android:text="@string/n" />

            <Button
                android:id="@+id/button26"
                android:layout_width="35dp"
                android:text="@string/m" />
        </GridLayout>
    </RelativeLayout>
</RelativeLayout>