<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Views.TelaInicial">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/botaoCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/botao_tela_principal"
            android:text="@string/botaoCadastro" />

        <Button
            android:id="@+id/botaoBaterPonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/botao_tela_principal"
            android:text="@string/botaoBaterPonto" />

        <Button
            android:id="@+id/botaoVisualizarBatidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingBottom="50dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/botao_tela_principal"
            android:text="@string/botaoVisualizarBatidas" />
    </LinearLayout>
</LinearLayout>