<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.TelaCadastro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutNomeCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="text"
                android:id="@+id/editNomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintNomeCompleto" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutDataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="datetime"
                android:focusable="false"
                android:id="@+id/editDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintDataNascimento" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutPIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="number"
                android:id="@+id/editPIS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hintPIS" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>